tdf#134355 custom shapes are never on layer 'controls' in Calc

Custom shapes were erroneously put on layer 'controls' when drag-
create them. But layer 'controls' is special to force form controls
to front in edit mode. Layer 'controls' is exclusively used for form
controls.

Change-Id: I2dd8a3b5ee6ac9bcc72f0446b17a49c037aa6731